[package]
name = "AOC_23_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.4.2"
chrono = "0.4.31"

[profile.release]
codegen-units = 1
panic = "abort"
rustc-flags = ["-C", "target-cpu=native"]
opt-level = 3